--- a/API/style.css
+++ b/API/style.css
@@ -39,6 +39,7 @@ main {
 .table {
   flex-direction: column;
   text-align: center;
+  margin-bottom: 20px;
 }
 table {
   border-collapse: collapse;
